--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <div class="container1" id="container1">
             <h2>Cadastro de Produtos</h2>
             <form action="" method="" id="ajax">
-              <input type="text" class="form-control" id="nome-produto" name="nome-produto" placeholder="Nome do produto" required>
+              <input type="text" class="form-control" id="nome-produto" name="nome-produto" onfocus="this.value='';" placeholder="Nome do produto" required>
 
-              <input type="text" class="form-control" id="descricao-produto" name="descricao-produto" placeholder="Descrição do produto" required>
+              <input type="text" class="form-control" id="descricao-produto" name="descricao-produto" onfocus="this.value='';" placeholder="Descrição do produto" required>
 
               <input type="number" class="form-control" id="valor-produto" name="valor-produto" placeholder="Valor do produto" required>
 
