adicionado função de excluir

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <th scope="col">Descricao</th>
                     <th scope="col">Disponibilidade</th>
                     <th scope="col">Valor (R$)</th>
+                    <th scope="col">Excluir</th>
                   </tr>
                 </thead>
                 <tbody id="data-output"></tbody>
